--- a/build.gradle
+++ b/build.gradle
@@ -37,3 +37,15 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+task fatJar(type: Jar) {
+    manifest {
+        attributes 'Main-Class': 'org.example.streaming.analytics.AnalyticsApplication'
+    }
+    archiveClassifier = "all"
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+    with jar
+}
